History of this buildout
========================

5.0.1 (unreleased)
------------------

- Fixed possible KeyError on company when member has no such property.
  [maurits]

- Fixed logic error in the display of numbering of attachments in
  meetings.
  [maurits]

- Sort meetings by start date.
  [maurits]


5.0 (2013-03-13)
----------------

- Use officially released Products.PluggableAuthService 1.10.0 and
  collective.emaillogin4 1.3.
  [maurits]

- Use Plone 4.2.4.
  [maurits]

- Use and install collective.emaillogin4 and use internal release of
  Products.PluggableAuthService, soon to be released officially.
  [maurits]

- Memmon limit: 1300.  Use newer versions for supervisor and friends.
  Send a mail to Maurits via scripts/sendmail.py when memmon kills the
  instance.
  [maurits]

- Let memmon check for a maximum memory of 2000 MB instead of 2560.
  [maurits]

- Added custom recent portlet, search portlet and linkedIn portlet
  [vincent]

- Changed text of email subscription notification so it correctly
  mentions an Event instead of a Hearing when that is the case.
  [maurits]

- Moved theming to Diazo [thomvl]

- Email from for EmailMixin objects is now specified in a portal
  property. [vincent]

- Manually commit the transaction after sending
  email. [vincent+maurits]

- Reactivated project reminder crontab, launched at midnight every
  tuesday and friday. [vincent]

- fixed caching for the meeting's location. [vincent]

- Configure blobs: in the postgres database.
  We cache them on clients in var/blobcache.
  [maurits]

- Update to plone 4.2.1.
  [maurits]

- Have a canonical list of skin layers for MinaraadTheme in
  Producst/minaraad/profiles/plone41/skins.xml.
  [maurits]

- Added a plone41 migration profile that is applied during an upgrade
  step of Products.minaraad.  Here we can put import steps that should
  be run once for the migration.  Currently just the skins.xml.  We
  add the new mina_styles layer only to the Minaraad Theme there.